# site-ier

./: .gitignore  README.md  pyproject.toml
idf/: 001_site.idf  limpia_folder.bat
notebooks/: 001_Revision_simulacion.ipynb
notebooks/.ipynb_checkpoints/: 002_AnalisisEnergia-checkpoint.ipynb
osm/: SITE_003_TechoVentilado_AC.osm
osm/SITE_003_TechoVentilado_AC/: workflow.osw
