[project]
name = "eficiencia-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iertools",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "pandas>=2.2.3",
]

[tool.uv.sources]
iertools = { git = "https://github.com/altamarmx/iertools.git" }
